force-app/main/default/objects/maps__SettingsGroup__c/maps__SettingsGroup__c.object-meta.xml
<CustomObject>
    <label>Maps Settings Group</label>
    <nameField>
        <label>Settings Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Settings Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>