force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__AllowExports__c.field-meta.xml
<CustomField>
    <fullName>maps__AllowExports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Exports</label>
    <type>Checkbox</type>
</CustomField>