force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__ButtonSet__c.field-meta.xml
<CustomField>
    <fullName>maps__ButtonSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Button Set</label>
    <referenceTo>maps__ButtonSet__c</referenceTo>
    <relationshipLabel>Maps Settings Groups</relationshipLabel>
    <relationshipName>Maps_Settings_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>