force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__CreateDataLayers__c.field-meta.xml
<CustomField>
    <fullName>maps__CreateDataLayers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Data Layers</label>
    <type>Checkbox</type>
</CustomField>