force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__DataRegion__c.field-meta.xml
<CustomField>
    <fullName>maps__DataRegion__c</fullName>
    <description>Select where off-platform compute resources reside</description>
    <label>Off-Platform Processing Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
                <default>true</default>
                <label>North America</label>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>