force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__DefaultMapTile__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultMapTile__c</fullName>
    <description>This is the default map tile to be used when the map is loaded</description>
    <label>Default Map Tile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESRI Street</fullName>
                <default>true</default>
                <label>ESRI Street</label>
            </value>
            <value>
                <fullName>ESRI Topography</fullName>
            </value>
            <value>
                <fullName>ESRI Imagery</fullName>
            </value>
            <value>
                <fullName>Google Road</fullName>
            </value>
            <value>
                <fullName>Google Satellite</fullName>
            </value>
            <value>
                <fullName>Google Hybrid</fullName>
            </value>
            <value>
                <fullName>Google Terrain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>