force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__Description__c.field-meta.xml
<CustomField>
    <fullName>maps__Description__c</fullName>
    <description>Settings Group Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>