force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__EnableArcGIS__c.field-meta.xml
<CustomField>
    <fullName>maps__EnableArcGIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable ArcGIS</label>
    <type>Checkbox</type>
</CustomField>