force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__EnablePolyline__c.field-meta.xml
<CustomField>
    <fullName>maps__EnablePolyline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Polyline</label>
    <type>Checkbox</type>
</CustomField>