force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__FolderAdmin__c.field-meta.xml
<CustomField>
    <fullName>maps__FolderAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folder Admin</label>
    <type>Checkbox</type>
</CustomField>