force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__LiveMobileTracking__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveMobileTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Mobile Tracking</label>
    <type>Checkbox</type>
</CustomField>