force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__MaxExportSize__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxExportSize__c</fullName>
    <label>Max Export Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>