force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__MaxQuerySize__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxQuerySize__c</fullName>
    <label>Max Query Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>