force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__MobileQuerySize__c.field-meta.xml
<CustomField>
    <fullName>maps__MobileQuerySize__c</fullName>
    <label>Mobile Query Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>