force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__ProxyUser__c.field-meta.xml
<CustomField>
    <fullName>maps__ProxyUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proxy</label>
    <type>Checkbox</type>
</CustomField>