force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__SelfHostedDataUser__c.field-meta.xml
<CustomField>
    <fullName>maps__SelfHostedDataUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Self Hosted Data Creation</label>
    <type>Checkbox</type>
</CustomField>