force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__ShowUserFolders__c.field-meta.xml
<CustomField>
    <fullName>maps__ShowUserFolders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show User Folders</label>
    <type>Checkbox</type>
</CustomField>