force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__ShowWeather__c.field-meta.xml
<CustomField>
    <fullName>maps__ShowWeather__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Weather</label>
    <type>Checkbox</type>
</CustomField>