force-app/main/default/objects/maps__SettingsGroup__c/fields/maps__TerritoryLayerCreation__c.field-meta.xml
<CustomField>
    <fullName>maps__TerritoryLayerCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Territory Layer</label>
    <type>Checkbox</type>
</CustomField>