force-app/main/default/objects/maps__SettingsGroup__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>